[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Clovis <clovis@example.com>"]
readme = "README.md"
license = "MIT"  # Adicione uma licença, se aplicável
repository = "https://github.com/seu-usuario/bookstore"  # Opcional
homepage = "https://github.com/seu-usuario/bookstore"  # Opcional

[tool.poetry.dependencies]
python = ">=3.12"
pytest = "^8.3.4"
factory-boy = "^3.3.1"
django = "^5.1.4"
djangorestframework = "^3.15.2"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "^5.0.1"

[tool.poetry.dev-dependencies]
# Adicione dependências de desenvolvimento aqui, se necessário

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
