[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Ramon Galdino da Silva <ramonofcgta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.8.1"
colorama = "0.4.6"
django = "^4.0.6"
django-debug-toolbar = "3.2.4"
django-extensions = "3.2.3"
djangorestframework = "3.15.2"
factory-boy = "3.3.1" 
faker = "24.8.0"
iniconfig = "2.0.0"
packaging = "24.0"
pluggy = "1.5.0"
psycopg2 = "2.9.10"
pytest = "8.3.4"
python-dateutil = "2.9.0.post0"
six = "1.16.0"
sqlparse = "0.4.4"
tzdata = "2024.1"
flake8 = "^7.1.1"
gitpython = "^3.1.44"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
factory-boy = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
